datacenter/infra/consul/k8s-datacenter/consul-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-server
  namespace: consul
  labels:
    name: consul-server
spec:
  selector:
    app: consul-server
  type: NodePort
  ports:
    - name: http
      port: 8500
      targetPort: 8500
      nodePort: 31091

    - name: https
      port: 8443
      targetPort: 8443
      nodePort: 31118

    - name: rpc
      port: 8400
      targetPort: 8400
      nodePort: 31008

    - name: serflan-tcp
      protocol: "TCP"
      port: 8301
      targetPort: 8301
      nodePort: 31425

    - name: serflan-udp
      protocol: "UDP"
      port: 8301
      targetPort: 8301
      nodePort: 31425

    - name: serfwan-tcp
      protocol: "TCP"
      port: 8302
      targetPort: 8302
      nodePort: 32403

    - name: serfwan-udp
      protocol: "UDP"
      port: 8302
      targetPort: 8302
      nodePort: 32403

    - name: server
      port: 8300
      targetPort: 8300
      nodePort: 31839

    - name: consuldns
      port: 8600
      targetPort: 8600
      nodePort: 31431
