datacenter/infra/consul/k8s-datacenter/consul-server-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-server
  namespace: consul
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: consul.ingress-nginx.freedom.org
      http:
        paths:
        - path: /
          backend:
            serviceName: consul-server
            servicePort: 8500

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-server-bj
  namespace: consul
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: consul-bj.ingress-nginx.freedom.org
      http:
        paths:
        - path: /
          backend:
            serviceName: consul-server-bj
            servicePort: 8500

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-server-gd
  namespace: consul
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: consul-gd.ingress-nginx.freedom.org
      http:
        paths:
        - path: /
          backend:
            serviceName: consul-server-gd
            servicePort: 8500
